# poke-server

./: .gitignore  setup.cfg
data/: pokemon.json
db/: diagram.xdot  main.db
db/migrations/: 1626131945-create-pokemon-table.up.sql  1626133069-insert-pokemons.up.sql  1627225337-insert-pokemon-species.up.sql
scripts/: deploy.sh
scripts/db/: migrate.sh
scripts/rpm/: pre-install.sh
src/poke_server/: main.py
src/poke_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/poke_server/db/core/: client.py  model.py
src/poke_server/db/model/: Pokemon.py
src/poke_server/http/: .server.py.swp  router.py  server.py
src/poke_server/http/handler/: PokeHandler.py
systemd/: poke-server.service
