[metadata]
name = poke-server
version = 1.0
license = GPL-3.0

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.entry_points]
console-scripts =
    poke-server = poke_server.main:main

[options.data_files]
/var/lib/poke-server/data = data/pokemon.json
/usr/lib/systemd/system = systemd/poke-server.service
